--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-minify-css": "^0.3.5",
     "proxy-middleware": "^0.5.0",
     "url": "^0.10.1",
-    "gulp-ondemand-server": "^0.2.0"
+    "gulp-ondemand-server": "^0.2.0",
+    "connect-modrewrite": "^0.7.6"
   }
 }
